[package]
name = "cxx-pit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
cxx = { version = "=1.0.107", default-features = false }
imxrt-ral = "0.5"

[build-dependencies]
cxx-build = "=1.0.107"
